# llm-usage-notes

./: .gitignore  main.py  pyproject.toml
notes/: completions.py  test.py
