[project]
name = "llm-usage-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.41.1",
    "rich>=15.0.0",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
